before and after charts refactoring

--- a/templates/code_formatter/refactor.html
+++ b/templates/code_formatter/refactor.html
@@ -67,7 +67,7 @@
                 codeMirrorEditor.setValue(data.refactored_code);
 
                 // Update chart with metrics
-                generateChart(data.before_metrics, data.after_metrics);
+                generateChart(data.original_complexity, data.refactored_complexity);
             } else {
                 alert('Error processing the code!');
             }
